# rustormy

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile
.githooks/: README  pre-commit
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  codeql.yml  release.yml  rust-clippy.yml  tests.yml
home-manager/: home.nix
src/: app.rs  cache.rs  cli.rs  config.rs  errors.rs  live.rs  logging.rs  main.rs  models.rs  tests.rs
src/config/: api_keys.rs  cli.rs  file.rs  legacy.rs  mod.rs
src/display/: color.rs  footer.rs  formatter.rs  icons.rs  mod.rs  theme.rs  translations.rs
src/weather/: enrich.rs  http.rs  mod.rs  open_meteo.rs  open_weather_map.rs  openuv.rs  provider.rs  sun.rs  tomorrow_io.rs  tools.rs  weather_api.rs  weather_bit.rs  world_weather_online.rs  yr.rs
src/weather/providers/: mod.rs  open_meteo.rs  open_weather_map.rs  tomorrow_io.rs  weather_api.rs  weather_bit.rs  world_weather_online.rs  yr.rs
tests/data/: open_meteo_geocoding_response.json  open_meteo_weather_response.json  openuv_response.json  wwo_response.json  yr.json
