[package]
name = "rustormy"
version = "0.3.3"
edition = "2024"
description = "Minimal neofetch-like weather CLI"
license = "MIT"
homepage = "https://github.com/Tairesh/rustormy"
repository = "https://github.com/Tairesh/rustormy"
readme = "README.md"
keywords = ["weather", "cli", "neofetch", "api", "ascii-art"]
categories = ["command-line-utilities", "api-bindings"]
authors = ["Tairesh <tairesh@protonmail.com>"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.9"
reqwest = { version = "0.12", features = ["json", "blocking"] }
thiserror = "2.0"
directories = "6.0"
capitalize = "0.3"
enum_dispatch = "0.3"
