[package]
name = "rustormy"
version = "0.4.2"
edition = "2024"
description = "Minimal neofetch-like weather CLI"
license = "MIT"
homepage = "https://github.com/Tairesh/rustormy"
repository = "https://github.com/Tairesh/rustormy"
readme = "README.md"
keywords = ["weather", "cli", "neofetch", "api", "ascii-art"]
categories = ["command-line-utilities", "api-bindings"]
authors = ["Tairesh <tairesh@protonmail.com>"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
reqwest = { version = "0.13", features = ["json", "blocking", "query"] }
thiserror = "2.0"
directories = "6.0"
capitalize = "0.3"
enum_dispatch = "0.3"
